# slicedict.py

./: README.md  setup.cfg
tests/slicedict/examples/: example.py
