# https://pypi.org/project/setupcfg-generator/
[metadata]
name = slicedict
version = 2018.11.20
url = https://github.com/looking-for-a-job/slicedict.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = slice dict

[options]
install_requires = 
	public
	setuptools
packages = 
	slicedict
